--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -35,8 +35,9 @@ css:
     background: -webkit-linear-gradient(to right, #fc6767, #ec008c);
     background: linear-gradient(to right, #fc6767, #ec008c);
     box-shadow: 1px 1px 25px 3px var(--primary);
-    width: 20%;
-    height: 55%;
+    width: 30%;
+    height: auto;
+    padding: 5% 0;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -71,7 +72,8 @@ css:
       background: linear-gradient(to right, #fc6767, #ec008c);
       box-shadow: 1px 1px 25px 3px var(--primary);
       width: 80%;
-      height: 65%;
+      height: auto;
+      padding: 10% 0;
       border-radius: 20px;
       display: flex;
       flex-direction: column;
