--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -92,11 +92,9 @@ h1,h2,h3,h4,h5,h6,p{
 	color: #333;
 	text-decoration: none;
 }
-.read {
+.button {
   	display: inline-block;
-	background: var(--secondary);
-	background: -webkit-linear-gradient(to right, var(--primary), var(--secondary));
-	background: linear-gradient(to right, var(--primary), var(--secondary));
+	background: var(--primary);
   	color: #fff;
   	padding: 2% 0;
   	border-radius: 20px;
@@ -104,7 +102,7 @@ h1,h2,h3,h4,h5,h6,p{
   	width: 50%;
   	margin: 0 25%;
   	cursor: pointer;
-  	box-shadow: 1px 5px 15px 3px var(--primary)
+  	box-shadow: 1px 5px 15px 3px var(--shadow)
 }
 .read:hover{
 	box-shadow: 1px 5px 15px 1px var(--primary)	
