--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -16,7 +16,7 @@
 .news.mt-2.mb-2
 	.horizontal-bar
 		h3.thin.mb-2.animated.fadeInLeftBig= translate 'home.title'
-		p.text-primary.thin.mb-2.animated.fadeInRightBig= link_to "Ver Todas", today_news_path
+		p.text-primary.thin.mb-2.animated.fadeInRightBig= link_to "Ver Todas", today_path
 
 	.mobile-gallery.gallery.js-flickity data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
