--- a/app/views/mobile/_bottom-nav.html.slim
+++ b/app/views/mobile/_bottom-nav.html.slim
@@ -1,6 +1,7 @@
 .bottom-nav
-  p
-    img src="https://img.icons8.com/ios-glyphs/40/999999/today-apps.png"
+  = link_to root_path
+	  p
+	    img src="https://img.icons8.com/ios-glyphs/40/999999/today-apps.png"
   p
     img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
   p
