--- a/app/views/news/categories.html.slim
+++ b/app/views/news/categories.html.slim
@@ -40,11 +40,25 @@
 			h3 Tesla
 		.available-category-square.ml-2#cripto
 			h3 Cripto Moedas
-	/.d-flex.justify-content-between
-		.available-category-square.mr-2-2#amazon
-			h3 Amazon
-		.available-category-square.ml-2#microsoft
-			h3 Microsoft
+javascript:
+	$("#business").click(		function(){ window.location.href = "/category/business" 		})
+	$("#economy").click(		function(){ window.location.href = "/category/economia" 		})
+	$("#bovespa").click(		function(){ window.location.href = "/category/bovespa" 			})
+	$("#travel").click(			function(){ window.location.href = "/category/viagem" 			})
+	$("#health").click(			function(){ window.location.href = "/category/saude" 			})
+	$("#sports").click(			function(){ window.location.href = "/category/esporte" 			})
+	$("#apple").click(			function(){ window.location.href = "/category/apple" 			})
+	$("#google").click(			function(){ window.location.href = "/category/google" 			})
+	$("#amazon").click(			function(){ window.location.href = "/category/amazon" 			})
+	$("#microsoft").click(		function(){ window.location.href = "/category/microsoft" 		})
+	$("#science").click(		function(){ window.location.href = "/category/ciencia" 			})
+	$("#entertainment").click(	function(){ window.location.href = "/category/entretenimento" 	})
+	$("#auto").click(			function(){ window.location.href = "/category/automoveis" 		})
+	$("#decoration").click(		function(){ window.location.href = "/category/decoracao" 		})
+	$("#technology").click(		function(){ window.location.href = "/category/tecnologia" 		})
+	$("#tesla").click(			function(){ window.location.href = "/category/tesla" 			})
+	$("#cripto").click(			function(){ window.location.href = "/category/cripto-moedas" 	})
+
 css:
 	.available-category-rectangle-horizontal{
 		width: 100%;
