--- a/app/views/mobile/_bottom-nav.html.slim
+++ b/app/views/mobile/_bottom-nav.html.slim
@@ -2,8 +2,9 @@
   = link_to root_path
 	  p
 	    img src="https://img.icons8.com/ios-glyphs/40/999999/today-apps.png"
-  p
-    img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
+  = link_to categories_path
+  	p
+    	img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
   p
     img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
 
