--- a/app/views/mobile/_bottom-nav.html.slim
+++ b/app/views/mobile/_bottom-nav.html.slim
@@ -5,6 +5,7 @@
   = link_to categories_path
   	p
     	img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
-  p
-    img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
+  = link_to new_user_session_path	
+  	p
+    	img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
 
