--- a/app/views/mobile/_bottom-nav.html.slim
+++ b/app/views/mobile/_bottom-nav.html.slim
@@ -1,20 +1,18 @@
 .bottom-nav
-	= link_to root_path
-		p
-			img src="https://img.icons8.com/ios-glyphs/40/999999/today-apps.png"
-  	= link_to categories_path
-  		p
-    		img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
+	
+	p= link_to root_path
+		img src="https://img.icons8.com/ios-glyphs/40/999999/today-apps.png"
+  	
+  	p= link_to categories_path
+    	img src="https://img.icons8.com/ios-glyphs/40/999999/albums.png"
   	- if current_user  	
-  		= link_to profile_path
-  			- if current_user.photo
-  				p
-  					= image_tag(current_user.photo, width: 40, height: 40, style: "border-radius: 50%")
-  			- else
-  				p
-		    		img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
-  	- else
-  		= link_to new_user_session_path	
-  			p
+  		- if current_user.photo
+  			p= link_to profile_path
+  				= image_tag(current_user.photo, width: 40, height: 40, style: "border-radius: 50%")
+  		- else
+  			p= link_to profile_path
 		    	img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
+  	- else
+  		p= link_to new_user_session_path
+		    img src="https://img.icons8.com/ios-filled/40/999999/user-male-circle.png"
 
