--- a/app/views/news/category.html.slim
+++ b/app/views/news/category.html.slim
@@ -1,5 +1,12 @@
 .p-3
-	h1.thin.mb-3.animated.fadeInLeftBig= @categoryName
+	.d-flex.justify-content-between
+		h1.thin.mb-3.animated.fadeInLeftBig#title= @categoryName
+		/- if @following.nil?
+		h1.add-following
+			img src="https://img.icons8.com/ios-glyphs/35/000000/add.png"
+		/- else
+		h1.remove-following
+			img src="https://img.icons8.com/ios/30/000000/ok.png"
 .news
 	.articles.animated.fadeInUpBig
 		center
@@ -14,3 +21,43 @@
 							div
 								a href="#{news['url']}" target="blank"
 									button.button= translate 'home.read'
+
+
+javascript:
+	$(document).ready(function(){
+		if ("#{@following.nil?}") {
+			$(".remove-following").hide()
+		}else{
+			$(".add-following").hide()
+			$(".remove-following").attr("id", "#{@following.id}")
+		}
+	})
+	$(".add-following").click(function(){
+		let title = $("#title").text()
+		let request = new Request()
+		let url = `/add_following/${title}`
+		let successCallback = data => {
+			$(".add-following").hide()
+			$(".remove-following").show()
+			$(".remove-following").attr("id", data.id)
+		}
+		let errorCallback = (x,y,z) => {
+			console.log(x)
+		}
+		let response = request.get(url, successCallback, errorCallback)
+		return response
+	})
+	$(".remove-following").click(function() {
+		let following_id = $(this).attr("id")
+		let request = new Request()
+		let url = `/remove_following/${following_id}`
+		let successCallback = data => {
+			$(".add-following").show()
+			$(".remove-following").hide()
+		}
+		let errorCallback = (x,y,z) => {
+			console.log(x)
+		}
+		let response = request.get(url, successCallback, errorCallback)
+		return response
+	})
