--- a/app/views/user/index.html.slim
+++ b/app/views/user/index.html.slim
@@ -13,7 +13,14 @@
 						img src="https://img.icons8.com/ios-filled/200/111111/user-male-circle.png"
 					= f.file_field :photo, id: "upload-photo", onchange: "this.form.submit()"
 		h3.text-center= @user.name
-
+.mt-5
+	.p-3
+		h4 Seguindo
+		- @following.each do |following|
+			.d-flex.justify-content-between.mt-2.p-1 id="row-#{following.id}" style="border-bottom: 1px solid #ccc"
+					h5= following.title
+					h5
+						img.remove-following id="#{following.id}" src="https://img.icons8.com/ios/25/EB4034/cancel.png"
 css:
 	label {cursor: pointer}
 	#upload-photo {
@@ -21,3 +28,20 @@ css:
 	   position: absolute;
 	   z-index: -1;
 	}
+javascript:
+	$(".remove-following").click(function() {
+		let following_id = $(this).attr("id")
+		let request = new Request()
+		let url = `/remove_following/${following_id}`
+		let successCallback = data => {
+			$(`#row-${following_id}`).addClass("animated fadeOutRight")
+			setTimeout(function(){
+				$(`#row-${following_id}`).remove()
+			},800)
+		}
+		let errorCallback = (x,y,z) => {
+			console.log(x)
+		}
+		let response = request.get(url, successCallback, errorCallback)
+		return response
+	})
