--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,10 +9,7 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     meta name="viewport" content="width=device-width, initial-scale=1.0"
   body
-    - if notice
-      p.notice= notice
-    - if alert
-      p.alert= alert
+    = render 'layouts/desktop-sidebar'
     = yield
     = render 'mobile/bottom-nav'
 
