--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -8,52 +8,29 @@ h1,h2,h3,h4,h5,h6,p{
 	color: #333;
 }
 .thin{ font-weight: 200 }
-/* Categories Styles .  .  .  .  .  .  .  .  .  .  .  . */
-.categories{
-	padding: 0 4%;
-	width: 100%;
-}
-.categories a{
-	text-decoration: none;
-	color: #333;
-	font-weight: 200;	
-}
-.category{
-	width: 100%;
-	height: 100px;
-	padding: 10px 15px;
-	border-radius: 10px;
-	background: var(--secondary);
-	background: -webkit-linear-gradient(to right, var(--primary), var(--secondary));
-	background: linear-gradient(to right, var(--primary), var(--secondary));
-	box-shadow: 1px 5px 15px 3px var(--primary)
-}
-.category:hover{
-	box-shadow: 1px 5px 15px 1px var(--primary)	
-}
-.category h4{
-	color: white;
-	font-weight: 200;
-}
-/* Header Styles .  .  .  .  .  .  .  .  .  .  .  */
-.Sign{
+/* Home Styles  .  .  .  .  .  .  .  .  .  .  .  .*/
+.home-desktop .sidebar{
+	background: rgba(255,255,255,0.7);
+	box-shadow: 0px 5px 10px 3px rgba(0,0,0,.1);
 	position: fixed;
 	top: 0;
-	right: 5%;
-	height: 40px;
-	width: 90px;
+	left: 0;
 	z-index: 999;
-	padding: 10px 0;
-	background: var(--secondary);
-	background: -webkit-linear-gradient(to right, var(--primary), var(--secondary));
-	background: linear-gradient(to right, var(--primary), var(--secondary));
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	box-shadow: 1px 2px 15px 3px var(--primary)
+	height: 100%;
+	width: 20%;
+	backdrop-filter: blur(20px);
+  	-webkit-backdrop-filter: blur(20px);
+  	-moz-backdrop-filter: blur(20px);
+  	-ms-backdrop-filter: blur(20px);
+  	-o-backdrop-filter: blur(20px);
 }
-.Sign a{
-	color: white !important;
-	text-decoration: none;
+.sidebar .horizontal-bar{
+	padding: 4% 4% 4% 4% !important;
+}
+.horizontal-bar{
+	display: flex;
+	justify-content: space-between;
+	padding: 0 1% 2% 21%;
 }
 /* Articles Styles .  .  .  .  .  .  .  .  .  .  .*/
 .articles{
@@ -104,80 +81,4 @@ h1,h2,h3,h4,h5,h6,p{
   	cursor: pointer;
   	box-shadow: 1px 5px 15px 3px var(--shadow)
 }
-.read:hover{
-	box-shadow: 1px 5px 15px 1px var(--primary)	
-}
-/* Home Styles .  .  .  .  .  .  .  .  .  .  .  . */
-.horizontal-bar{
-	display: flex;
-	justify-content: space-between;
-	padding: 0 3% 2% 3%;
-}
-.search{
-	border: none;
-	border-radius: 10px;
-	padding: 0 1%;
-}
-/* Loader Styles .  .  .  .  .  .  .  .  .  .  .  */
-.loader{
-  width: 100px;
-  height: 100px;
-  border-radius: 100%;
-  position: relative;
-  margin: 0 auto;
-}
-#loader span{
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  border-radius: 100%;
-  background-color: var(--secondary);
-  margin: 35px 5px;
-}
-#loader span:nth-child(1){
-  animation: bounce 1s ease-in-out infinite;
-}
-#loader span:nth-child(2){
-  animation: bounce 1s ease-in-out 0.33s infinite;
-}
-#loader span:nth-child(3){
-  animation: bounce 1s ease-in-out 0.66s infinite;
-}
-@keyframes bounce{
-  0%, 75%, 100%{
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -o-transform: translateY(0);
-    transform: translateY(0);
-  }
-  25%{
-    -webkit-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
-    -o-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
-}
-/* Cover of Category Page Styles .  .  .  .  .  . */
-.cover{
-	width: 100%;
-	height: 200px;
-	top: 0;
-	left: 0;
-	position: absolute;
-	background: var(--secondary);
-	background: -webkit-linear-gradient(to right, var(--primary), var(--secondary));
-	background: linear-gradient(to right, var(--primary), var(--secondary));
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	padding: 0 2%;
-	color: white;
-	box-shadow: 1px 5px 15px 3px var(--primary)
-}
-.cover-title{
-	display: flex;
-	justify-content: flex-start;
-}
-.text-black{
-	color: #555 !important;
-}
+
