--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -6,8 +6,10 @@ body{
 }
 h1,h2,h3,h4,h5,h6,p{
 	color: #333;
+	font-family: 'Noto Serif', serif;
 }
 .thin{ font-weight: 200 }
+.ulta-thin{ font-weight: 50 !important }
 /* Home Styles  .  .  .  .  .  .  .  .  .  .  .  .*/
 .home-desktop .sidebar{
 	background: rgba(255,255,255,0.7);
@@ -30,7 +32,15 @@ h1,h2,h3,h4,h5,h6,p{
 .horizontal-bar{
 	display: flex;
 	justify-content: space-between;
-	padding: 0 1% 2% 21%;
+	padding: 0 1% 2% 1%;
+}
+.main{
+	position: absolute;
+	top: 0;
+	left: 20%;
+	z-index: 99;
+	height: 100%;
+	width: 80%;	
 }
 /* Articles Styles .  .  .  .  .  .  .  .  .  .  .*/
 .articles{
@@ -73,12 +83,15 @@ h1,h2,h3,h4,h5,h6,p{
   	display: inline-block;
 	background: var(--primary);
   	color: #fff;
+  	font-family: 'Noto Serif', serif;
   	padding: 2% 0;
   	border-radius: 20px;
   	border: none;
   	width: 50%;
   	margin: 0 25%;
   	cursor: pointer;
-  	box-shadow: 1px 5px 15px 3px var(--shadow)
+  	box-shadow: 1px 5px 15px 3px var(--shadow);
 }
-
+.button:hover{
+	box-shadow: 1px 5px 15px 3px transparent;
+}
