--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -16,7 +16,7 @@
 					a href="#{headlines[i]['url']}" target="blank"
 						button.button= translate 'home.read'
 
-	.web-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
+	.web-gallery.gallery.js-flickity.pb-3.animated.slideInLeft data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
 			.gallery-cell.article
 				div
@@ -42,7 +42,7 @@
 				div
 					a href="#{economy[i]['url']}" target="blank"
 						button.button= translate 'home.read'
-	.web-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
+	.web-gallery.gallery.js-flickity.pb-3.animated.slideInRight data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
 			.gallery-cell.article
 				div
@@ -68,7 +68,7 @@
 				div
 					a href="#{corona[i]['url']}" target="blank"
 						button.button= translate 'home.read'
-	.web-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
+	.web-gallery.gallery.js-flickity.pb-3.animated.slideInLeft data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
 			.gallery-cell.article
 				div
@@ -94,7 +94,7 @@
 				div
 					a href="#{politica[i]['url']}" target="blank"
 						button.button= translate 'home.read'
-	.web-gallery.gallery.js-flickity.pb-3 data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
+	.web-gallery.gallery.js-flickity.pb-3.animated.slideInRight data-flickity-options='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false }'
 		- 10.times do |i|
 			.gallery-cell.article
 				div
