--- a/app/views/layouts/_desktop-sidebar.html.slim
+++ b/app/views/layouts/_desktop-sidebar.html.slim
@@ -1,5 +1,5 @@
 .home-desktop
-  .sidebar
+  .sidebar.animated.slideInLeft
     .horizontal-bar.mt-3
       div
         h5.thin.home-date= homeDate
@@ -8,7 +8,7 @@
       p= link_to root_path, style: "color: #777777; text-decoration: none"
         p.mr-1
           img src="https://img.icons8.com/ios-glyphs/30/777777/today-apps.png"
-        p.ml-1 style="line-height: 30px;" Home
+        p.ml-1 style="line-height: 30px;" Home    
     .d-flex.justify-content-start.pl-3.pr-3
       p= link_to categories_path, style: "color: #777777; text-decoration: none"
         p.mr-1
