--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -8,18 +8,25 @@ h1,h2,h3,h4,h5,h6,p{
 	color: #333;
 	font-family: 'Noto Serif', serif;
 }
+.inset-shadow{
+	-moz-box-shadow:    inset 0 0 10px rgba(0,0,0,.1);
+	-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
+	box-shadow:         inset 0 0 10px rgba(0,0,0,.1);	
+}
 .thin{ font-weight: 200 }
 .ulta-thin{ font-weight: 50 !important }
 /* Home Styles  .  .  .  .  .  .  .  .  .  .  .  .*/
 .home-desktop .sidebar{
-	background: rgba(255,255,255,0.7);
-	box-shadow: 0px 5px 10px 3px rgba(0,0,0,.1);
+	background: rgba(230,230,230,0.7);
+   	-moz-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
+   	-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
+   	box-shadow: inset 0 0 10px rgba(0,0,0,.1);
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 999;
 	height: 100%;
-	width: 20%;
+	width: 15%;
 	backdrop-filter: blur(20px);
   	-webkit-backdrop-filter: blur(20px);
   	-moz-backdrop-filter: blur(20px);
@@ -37,10 +44,10 @@ h1,h2,h3,h4,h5,h6,p{
 .main{
 	position: absolute;
 	top: 0;
-	left: 20%;
+	left: 15%;
 	z-index: 99;
 	height: 100%;
-	width: 80%;	
+	width: 85%;	
 }
 /* Articles Styles .  .  .  .  .  .  .  .  .  .  .*/
 .articles{
