--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,10 +3,10 @@
 	  	h1.ulta-thin Feres News
 	  	- if current_user
 	  		- if current_user.photo
-	  			p= link_to profile_path
+	  			p#openProfileBox
 	  				= image_tag(current_user.photo, width: 50, height: 50, style: "border-radius: 50%")	
 	  		- else
-	  			p= link_to profile_path
+	  			p#openProfileBox
 			    	img src="https://img.icons8.com/ios-filled/50/999999/user-male-circle.png"
 	  	- else
 	  		p= link_to new_user_session_path
@@ -18,6 +18,7 @@
 			h5.home-date= homeDate
 			h2= @saudation
 = render "./home/news", headlines: @topHeadlines['articles'], economy: @economyNews['articles'], corona: @coronaNews['articles'], politica: @politicaNews['articles']
+
 javascript:
 	$(document).ready(function(){
 		const base_url = "#{Rails.env}" == "development" ? "http://localhost:3000" : "http://feres-news.com"
@@ -29,33 +30,10 @@ javascript:
 		$(".search-mobile").change(function(){
 			home.search( $(".search-mobile").val() )
 		})
-		$("#about").click(function(){
-			$(".AboutFeresNews").show()
-			$(".AboutFeresNews").addClass("animated fadeInRightBig")
-			window.setTimeout(function(){
-				$(".AboutFeresNews").removeClass("animated fadeInRightBig")		
-			}, 800);
-		})
-		$("#closeAbout").click(function(){
-			$(".AboutFeresNews").addClass("animated fadeOutRightBig")
-			window.setTimeout(function(){
-				$(".AboutFeresNews").hide()
-				$(".AboutFeresNews").removeClass("animated fadeOutRightBig")
-			}, 800);
-		})
 	})
 
 
 css:
-	* {
-	  	-webkit-box-sizing: border-box;
-	  	box-sizing: border-box;
-	}
-
-	body { font-family: sans-serif; }
-	#aligner1,#aligner2{
-		background: black !important;	
-	}
 	.gallery {
 		background: -webkit-linear-gradient(to bottom, #fff, #f2f2f2);
 		background: linear-gradient(to bottom, #fff, #f2f2f2);	  
@@ -65,7 +43,6 @@ css:
 	  	margin: 0 5%;
 	  	counter-increment: gallery-cell;
 	}
-
 	.web-gallery .gallery-cell {
 	  	width: 20%;
 	  	margin: 0 1%;
@@ -74,4 +51,3 @@ css:
 	.home-date{
 		color: rgba(0,0,0,0.3)
 	}
-
