--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,10 +3,10 @@
 	  	h1.ulta-thin Feres News
 	  	- if current_user
 	  		- if current_user.photo
-	  			p#openProfileBox
+	  			p= link_to profile_path
 	  				= image_tag(current_user.photo, width: 50, height: 50, style: "border-radius: 50%")	
 	  		- else
-	  			p#openProfileBox
+	  			p= link_to profile_path
 			    	img src="https://img.icons8.com/ios-filled/50/999999/user-male-circle.png"
 	  	- else
 	  		p= link_to new_user_session_path
@@ -18,7 +18,6 @@
 			h5.home-date= homeDate
 			h2= @saudation
 = render "./home/news", headlines: @topHeadlines['articles'], economy: @economyNews['articles'], corona: @coronaNews['articles'], politica: @politicaNews['articles']
-
 javascript:
 	$(document).ready(function(){
 		const base_url = "#{Rails.env}" == "development" ? "http://localhost:3000" : "http://feres-news.com"
@@ -43,6 +42,7 @@ css:
 	  	margin: 0 5%;
 	  	counter-increment: gallery-cell;
 	}
+
 	.web-gallery .gallery-cell {
 	  	width: 20%;
 	  	margin: 0 1%;
@@ -51,3 +51,4 @@ css:
 	.home-date{
 		color: rgba(0,0,0,0.3)
 	}
+
