--- a/app/assets/stylesheets/Feres_News_Mobile_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Mobile_Theme.css
@@ -7,6 +7,9 @@
 .home-mobile{
 	display: none;	
 }
+.mobile-categories{
+	display: none;
+}
 /* Mobile Adapted Styles .  .  .  .  .  .  .  .  .  .*/
 @media only screen and (max-width: 600px) {
 	body {
@@ -83,5 +86,37 @@
 	}
 	.horizontal-bar{
 		padding: 0 2% 2% 2% !important;
-	}	
+	}
+	.mobile-categories{
+		display: block;
+	}
+	.mobile-categories .available-category-rectangle-horizontal{
+		width: 100%;
+		height: 150px;
+		border-radius: 20px;
+		margin-bottom: 3%;
+		padding: 3%;
+	}
+	.mobile-categories .available-category-rectangle-vertical{
+		width: 50%;
+		height: 300px;
+		border-radius: 20px;
+		margin-bottom: 3%;
+		padding: 3%;
+	}
+	.mobile-categories .available-category-square{
+		width: 50%;
+		height: 150px;
+		border-radius: 20px;
+		margin-bottom: 3%;
+		padding: 3%;
+	}
+	.mobile-categories .available-category-rectangle-horizontal h3, 
+	.mobile-categories .available-category-rectangle-vertical h3, 
+	.mobile-categories .available-category-square h3{
+		color: white;
+	}
+	.desktop-categories{
+		display: none;
+	}
 }
