--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -26,7 +26,7 @@ h1,h2,h3,h4,h5,h6,p{
 	left: 0;
 	z-index: 999;
 	height: 100%;
-	width: 15%;
+	width: 18%;
 	backdrop-filter: blur(20px);
   	-webkit-backdrop-filter: blur(20px);
   	-moz-backdrop-filter: blur(20px);
@@ -44,10 +44,10 @@ h1,h2,h3,h4,h5,h6,p{
 .main{
 	position: absolute;
 	top: 0;
-	left: 15%;
+	left: 18%;
 	z-index: 99;
 	height: 100%;
-	width: 85%;	
+	width: 82%;	
 }
 /* Articles Styles .  .  .  .  .  .  .  .  .  .  .*/
 .articles{
@@ -101,4 +101,100 @@ h1,h2,h3,h4,h5,h6,p{
 }
 .button:hover{
 	box-shadow: 1px 5px 15px 3px transparent;
+}
+/*Categories*/
+.desktop-categories .square{
+	width: 100%;
+	height: 200px;
+	border-radius: 15px;
+	margin-bottom: 3%;
+	padding: 4% 5%;
+}
+.desktop-categories .square h3{
+	color: white;
+}
+#business{
+	background: #614385;
+	background: -webkit-linear-gradient(150deg, #614385, #516395);
+	background: linear-gradient(150deg, #614385, #516395);
+}
+#health{
+	background: #1D976C;
+	background: -webkit-linear-gradient(150deg, #1D976C, #93F9B9);
+	background: linear-gradient(150deg, #1D976C, #93F9B9);		
+}
+#economy{
+	background: #FF8008;
+	background: -webkit-linear-gradient(150deg, #FFC837, #FF8008);
+	background: linear-gradient(150deg, #FFC837, #FF8008);
+}
+#sports{
+	background: #EB3349;
+	background: -webkit-linear-gradient(150deg, #F45C43, #EB3349);
+	background: linear-gradient(150deg, #F45C43, #EB3349);
+}
+#science{
+	background: #1FA2FF;
+	background: -webkit-linear-gradient(150deg, #A6FFCB, #12D8FA, #1FA2FF);
+	background: linear-gradient(150deg, #A6FFCB, #12D8FA, #1FA2FF);
+}
+#entertainment{
+	background: #AA076B;
+	background: -webkit-linear-gradient(150deg, #61045F, #AA076B);
+	background: linear-gradient(150deg, #61045F, #AA076B);
+}
+#bovespa{
+	background: #FF512F;
+	background: -webkit-linear-gradient(150deg, #DD2476, #FF512F);
+	background: linear-gradient(150deg, #DD2476, #FF512F);	
+}
+#travel{
+	background: #2193b0;
+	background: -webkit-linear-gradient(150deg, #6dd5ed, #2193b0);
+	background: linear-gradient(150deg, #6dd5ed, #2193b0);		
+}
+#apple{
+	background: #000000;
+	background: -webkit-linear-gradient(150deg, #434343, #000000);
+	background: linear-gradient(150deg, #434343, #000000);
+}
+#google{
+	background: #cb2d3e;
+	background: -webkit-linear-gradient(150deg, #ef473a, #cb2d3e);
+	background: linear-gradient(150deg, #ef473a, #cb2d3e);
+}
+#amazon{
+	background: #f46b45;
+	background: -webkit-linear-gradient(150deg, #eea849, #f46b45);
+	background: linear-gradient(150deg, #eea849, #f46b45);
+}
+#microsoft{
+	background: #396afc;
+	background: -webkit-linear-gradient(150deg, #2948ff, #396afc);
+	background: linear-gradient(150deg, #2948ff, #396afc);
+}
+#technology{
+	background: #8A2387;
+	background: -webkit-linear-gradient(150deg, #F27121, #E94057, #8A2387);
+	background: linear-gradient(150deg, #F27121, #E94057, #8A2387);
+}
+#decoration{
+	background: #005C97;
+	background: -webkit-linear-gradient(150deg, #363795, #005C97);
+	background: linear-gradient(150deg, #363795, #005C97);
+}
+#auto{
+	background: #000;
+	background: -webkit-linear-gradient(150deg, #000, #333);
+	background: linear-gradient(150deg, #000, #333);
+}
+#tesla{
+	background: #737373;
+	background: -webkit-linear-gradient(150deg, #737373, #444);
+	background: linear-gradient(150deg, #737373, #444);
+}
+#cripto{
+	background: #33cc33;
+	background: -webkit-linear-gradient(150deg, #33cc33, #248f24);
+	background: linear-gradient(150deg, #33cc33, #248f24);
 }
