--- a/app/views/news/category.html.slim
+++ b/app/views/news/category.html.slim
@@ -1,10 +1,11 @@
 .p-3
 	.d-flex.justify-content-between
 		h1.thin.mb-3.animated.fadeInLeftBig#title= @categoryName
-		h1.add-following
-			img src="https://img.icons8.com/ios-glyphs/35/000000/add.png"
-		h1.remove-following
-			img src="https://img.icons8.com/ios/30/000000/ok.png"
+		- if current_user
+			h1.add-following
+				img src="https://img.icons8.com/ios-glyphs/35/000000/add.png"
+			h1.remove-following
+				img src="https://img.icons8.com/ios/30/000000/ok.png"		
 .news
 	.articles.animated.fadeInUpBig
 		center
@@ -19,7 +20,6 @@
 							div
 								a href="#{news['url']}" target="blank"
 									button.button= translate 'home.read'
-
 javascript:
 	$(document).ready(function(){
 		let f = "#{@following.nil?}"
