--- a/app/views/layouts/_desktop-sidebar.html.slim
+++ b/app/views/layouts/_desktop-sidebar.html.slim
@@ -3,7 +3,7 @@
     .horizontal-bar.mt-3
       div
         h5.thin.home-date= homeDate
-        h2.thin= @saudation
+        h2.thin= saudation
     .d-flex.justify-content-start.pl-3.pr-3.mt-5
       p= link_to root_path, style: "color: #777777; text-decoration: none"
         p.mr-1
